// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveAssessmentDialog renders with enabled = false 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        Enable the save assessment dialog
      </div>
      <div
        class="ms-Toggle is-enabled toggle root-109"
      >
        <div
          class="ms-Toggle-innerContainer container-111"
        >
          <button
            aria-checked="false"
            aria-label="Enable the save assessment dialog"
            class="ms-Toggle-background pill-116"
            data-is-focusable="true"
            data-ktp-target="true"
            id="enable-save-assessment-dialog"
            role="switch"
            type="button"
          >
            <span
              class="ms-Toggle-thumb thumb-117"
            />
          </button>
          <label
            class="ms-Label ms-Toggle-stateText text-115"
            for="enable-save-assessment-dialog"
            id="enable-save-assessment-dialog-stateText"
          >
            Off
          </label>
        </div>
      </div>
    </div>
    <div
      class="toggleDescription"
    >
      Show the save assessment dialog.
    </div>
  </div>
</DocumentFragment>
`;

exports[`SaveAssessmentDialog renders with enabled = true 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        Enable the save assessment dialog
      </div>
      <div
        class="ms-Toggle is-checked is-enabled toggle root-109"
      >
        <div
          class="ms-Toggle-innerContainer container-111"
        >
          <button
            aria-checked="true"
            aria-label="Enable the save assessment dialog"
            class="ms-Toggle-background pill-112"
            data-is-focusable="true"
            data-ktp-target="true"
            id="enable-save-assessment-dialog"
            role="switch"
            type="button"
          >
            <span
              class="ms-Toggle-thumb thumb-113"
            />
          </button>
          <label
            class="ms-Label ms-Toggle-stateText text-115"
            for="enable-save-assessment-dialog"
            id="enable-save-assessment-dialog-stateText"
          >
            On
          </label>
        </div>
      </div>
    </div>
    <div
      class="toggleDescription"
    >
      Show the save assessment dialog.
    </div>
  </div>
</DocumentFragment>
`;
